about to finnish

--- a/choropleth.html
+++ b/choropleth.html
@@ -84,7 +84,7 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="column.html">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Column Charts</span>
                 </a>
@@ -199,80 +199,101 @@
                 <!-- End of Topbar -->
 
 
+                <div class="d-flex blog">
+                    <blockquote class="blockquote flex-fill">
+                        <p>Global Cardiovascular Disease Death Rates in 2020: A World Map Choropleth Visualization
+                        </p>
+                        <div class="img-container">
+                            <img src="img/choropleth.png" alt="" class="img-fluid">
+                        </div>
+                    </blockquote>
+                    <p class="flex-fill ">
+
+                        This world map illustrates the <span style="color: #FF6347;">age-standardized death rate from
+                            cardiovascular diseases</span> in 2020, with colors ranging from light pink to dark red
+                        indicating varying rates per 100,000 people across different regions. Countries in <span
+                            style="color: #4169E1;">Eastern Europe, Central Asia, and parts of Africa</span> show the
+                        highest rates, with some areas exceeding 500 deaths per 100,000, depicted in deep red. In
+                        contrast, regions like <span style="color: #FFD700;">North America, Western Europe, and
+                            Australia</span> display lower rates, shown in lighter shades, often below 200 per 100,000.
+                        The color gradient highlights significant global disparities in <span
+                            style="color: #00CED1;">cardiovascular disease mortality</span>, emphasizing the impact of
+                        regional health, lifestyle, and healthcare access on <span style="color: #2E8B57;">death
+                            rates</span> worldwide.</p>
+                    </p>
+                </div>
 
 
-                
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                        <footer class="sticky-footer bg-white">
-                            <div class="container my-auto">
-                                <div class="copyright text-center my-auto">
-                                    <span>Copyright &copy; Kiet - Tram 2025</span>
-                                </div>
+                    <footer class="sticky-footer bg-white">
+                        <div class="container my-auto">
+                            <div class="copyright text-center my-auto">
+                                <span>Copyright &copy; Kiet - Tram 2025</span>
                             </div>
-                        </footer>
-                        <!-- Scroll to Top Button-->
-                        <a class="scroll-to-top rounded" href="#page-top">
-                            <i class="fas fa-angle-up"></i>
-                        </a>
+                        </div>
+                    </footer>
+                    <!-- Scroll to Top Button-->
+                    <a class="scroll-to-top rounded" href="#page-top">
+                        <i class="fas fa-angle-up"></i>
+                    </a>
 
-                        <!-- Logout Modal-->
-                        <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog"
-                            aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">×</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">Select "Logout" below if you are ready to end your current
-                                        session.</div>
-                                    <div class="modal-footer">
-                                        <button class="btn btn-secondary" type="button"
-                                            data-dismiss="modal">Cancel</button>
-                                        <a class="btn btn-primary" href="login.html">Logout</a>
-                                    </div>
+                    <!-- Logout Modal-->
+                    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">Select "Logout" below if you are ready to end your current
+                                    session.</div>
+                                <div class="modal-footer">
+                                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                                    <a class="btn btn-primary" href="login.html">Logout</a>
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <!-- Bootstrap core JavaScript-->
-                        <script src="vendor/jquery/jquery.min.js"></script>
-                        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+                    <!-- Bootstrap core JavaScript-->
+                    <script src="vendor/jquery/jquery.min.js"></script>
+                    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-                        <!-- Core plugin JavaScript-->
-                        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+                    <!-- Core plugin JavaScript-->
+                    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-                        <!-- Custom scripts for all pages-->
-                        <script src="js/sb-admin-2.min.js"></script>
+                    <!-- Custom scripts for all pages-->
+                    <script src="js/sb-admin-2.min.js"></script>
 
-                        <!-- Page level plugins -->
-                        <script src="vendor/chart.js/Chart.min.js"></script>
+                    <!-- Page level plugins -->
+                    <script src="vendor/chart.js/Chart.min.js"></script>
 
-                        <!-- Page level custom scripts -->
-                        <script src="js/demo/chart-area-demo.js"></script>
-                        <script src="js/demo/chart-pie-demo.js"></script>
+                    <!-- Page level custom scripts -->
+                    <script src="js/demo/chart-area-demo.js"></script>
+                    <script src="js/demo/chart-pie-demo.js"></script>
 
-                        <!-- clock thingy -->
-                        <script src="https://unpkg.com/@pqina/flip/dist/flip.min.js"></script>
-                        <script>
-                            function setupFlip(tick) {
+                    <!-- clock thingy -->
+                    <script src="https://unpkg.com/@pqina/flip/dist/flip.min.js"></script>
+                    <script>
+                        function setupFlip(tick) {
 
-                                Tick.helper.interval(function () {
+                            Tick.helper.interval(function () {
 
-                                    tick.value++;
+                                tick.value++;
 
-                                    // Set `aria-label` attribute which screenreaders will read instead of HTML content
-                                    tick.root.setAttribute('aria-label', tick.value);
+                                // Set `aria-label` attribute which screenreaders will read instead of HTML content
+                                tick.root.setAttribute('aria-label', tick.value);
 
-                                }, 1000);
+                            }, 1000);
 
-                            }
-                        </script>
+                        }
+                    </script>
 
 </body>
 
