--- a/column.html
+++ b/column.html
@@ -126,7 +126,7 @@
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
+        <div id="content-wrapper" class="d-flex flex-column" style="height: auto;">
 
             <!-- Main Content -->
             <div id="content">
@@ -197,107 +197,143 @@
 
                 </nav>
                 <!-- End of Topbar -->
+                <div class="blog_area">
 
 
-
-
-                <div class="d-flex blog">
-                    <blockquote class="blockquote flex-fill">
-                        <p>Global Causes of Death: A Treemap Visualization
+                    <div class="d-flex blog">
+                        <blockquote class="blockquote flex-fill">
+                            <p>Analysis of Age-Standardized Death Rates from Cardiovascular Diseases in Japan
+                                (1950–2025)
+                            </p>
+                            <div class="img-container">
+                                <img src="img/VD_bar chart_all.jpg" alt="" class="img-fluid">
+                            </div>
+                        </blockquote>
+                        <p class="flex-fill ">
+                        <p>The line chart shows a decline in age-standardized death rates from cardiovascular diseases
+                            in
+                            Japan, from 300 per 100,000 in 1950 to below 50 by 2025. Rates peaked at 350 in the early
+                            1970s,
+                            likely due to limited <span style="color: #FF6347;">heart disease awareness</span>. A steady
+                            drop began in the late 1970s, reaching 250 by 1980, driven by improved <span
+                                style="color: #4169E1;">access to preventive healthcare</span>. By the early 2000s,
+                            rates
+                            fell to 200, aided by <span style="color: #FFD700;">reduction in smoking</span> and <span
+                                style="color: #00CED1;">healthy diet adoption</span>. Minor fluctuations occurred, but
+                            progress in reducing <span style="color: #2E8B57;">deaths due to cardiovascular
+                                diseases</span>
+                            highlights the need for ongoing public health efforts.</p>
                         </p>
-                        <div class="img-container">
-                            <img src="img/tree map.png" alt="" class="img-fluid">
-                        </div>
-                    </blockquote>
-                    <p class="flex-fill ">
-                    <p>
-                    <p>This treemap visually represents the global distribution of causes of death, with each
-                        rectangle’s size and color indicating the proportion of deaths attributed to specific
-                        categories. <span style="color: #FF6347;">Cardiovascular diseases</span> dominate at 30.2%,
-                        shown in a large red block, followed by <span style="color: #4169E1;">neoplasms</span> at 16.4%,
-                        also in red. Other significant causes include <span style="color: #FFD700;">chronic respiratory
-                            diseases</span> (8.5%), <span style="color: #00CED1;">lower respiratory infections</span>
-                        (5.4%), and <span style="color: #2E8B57;">neonatal disorders</span> (4.9%), with varying shades
-                        of red, orange, and yellow reflecting different disease categories. Smaller causes, like <span
-                            style="color: #FF6347;">malaria</span> (1.0%) and <span
-                            style="color: #4169E1;">HIV/AIDS</span> (1.2%), appear in lighter, smaller blocks, providing
-                        a clear, color-coded overview of <span style="color: #FFD700;">mortality patterns</span>
-                        worldwide.</p>
-                    </p>
-                    </p>
-                </div>
+                    </div>
 
+                    <div class="d-flex blog">
+                        <blockquote class="blockquote flex-fill">
+                            <p>Analysis of Age-Standardized Death Rates from Cardiovascular Diseases in
+                                Australia(1977–2019)
+                            </p>
+                            <div class="img-container">
+                                <img src="img/VD_bar chart_usa.jpg" alt="" class="img-fluid">
+                            </div>
+                        </blockquote>
+                        <p class="flex-fill ">
+                        <p>The bar chart shows age-standardized <span style="color: #2E8B57;">death rates from
+                                cardiovascular diseases</span> per 100,000 people from 1977 to 2019. In 1977, the rate
+                            peaked at around 700, but it sharply declined to 500 by 1980, likely due to improved <span
+                                style="color: #FF6347;">heart disease awareness</span> and <span
+                                style="color: #4169E1;">access to preventive healthcare</span>. Throughout the 1980s and
+                            1990s, rates fluctuated between 400 and 500, but a steady decline began in the late 1990s,
+                            falling below 300 by 2019. This trend reflects advancements in medical treatments, <span
+                                style="color: #FFD700;">reduction in smoking</span>, and <span
+                                style="color: #00CED1;">healthy diet adoption</span>. However, minor increases in some
+                            years
+                            suggest ongoing challenges. The chart highlights significant progress in cardiovascular
+                            health
+                            but emphasizes the need for continued public health initiatives.</p>
+                        </p>
+                    </div>
 
-                <!-- Begin Page Content -->
-                <div class="container-fluid">
-
-                    <footer class="sticky-footer bg-white">
-                        <div class="container my-auto">
-                            <div class="copyright text-center my-auto">
+                    <div class="d-flex blog">
+                        <blockquote class="blockquote flex-fill">
+                            <p>Analysis of Age-Standardized Death Rates from Cardiovascular Diseases in Mexico
+                                (1960–2020)
+                            </p>
+                            <div class="img-container">
+                                <img src="img/bar line.png" alt="" class="img-fluid">
+                            </div>
+                        </blockquote>
+                        <p class="flex-fill ">
+                        <p>The line chart shows fluctuating age-standardized death rates from cardiovascular diseases in
+                            Mexico, starting at around 200 per 100,000 in 1960. Rates peaked at 220 in the 1980s and
+                            early
+                            1990s, possibly due to limited <span style="color: #FF6347;">heart disease awareness</span>.
+                            A
+                            significant decline began in the late 1990s, dropping to 160 by 2000, driven by improved
+                            <span style="color: #4169E1;">access to preventive healthcare</span> and <span
+                                style="color: #FFD700;">reduction in smoking</span>. However, rates rose again after
+                            2010,
+                            reaching 200 by 2020, indicating challenges like insufficient <span
+                                style="color: #00CED1;">healthy diet adoption</span>. The chart underscores ongoing
+                            issues
+                            in managing <span style="color: #2E8B57;">deaths due to cardiovascular diseases</span>,
+                            highlighting the need for sustained public health efforts.
+                        </p>
+                        </p>
+                    </div>
+                    <footer class="bg-white sticky-footer w-100">
+                        <div class="container">
+                            <div class="copyright text-center">
                                 <span>Copyright &copy; Kiet - Tram 2025</span>
                             </div>
                         </div>
                     </footer>
-                    <!-- Scroll to Top Button-->
-                    <a class="scroll-to-top rounded" href="#page-top">
-                        <i class="fas fa-angle-up"></i>
-                    </a>
+                </div>
 
-                    <!-- Logout Modal-->
-                    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog"
-                        aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">×</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">Select "Logout" below if you are ready to end your current
-                                    session.</div>
-                                <div class="modal-footer">
-                                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                                    <a class="btn btn-primary" href="login.html">Logout</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                
 
-                    <!-- Bootstrap core JavaScript-->
-                    <script src="vendor/jquery/jquery.min.js"></script>
-                    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-                    <!-- Core plugin JavaScript-->
-                    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+                <!-- Scroll to Top Button-->
+                <a class="scroll-to-top rounded" href="#page-top">
+                    <i class="fas fa-angle-up"></i>
+                </a>
 
-                    <!-- Custom scripts for all pages-->
-                    <script src="js/sb-admin-2.min.js"></script>
-
-                    <!-- Page level plugins -->
-                    <script src="vendor/chart.js/Chart.min.js"></script>
-
-                    <!-- Page level custom scripts -->
-                    <script src="js/demo/chart-area-demo.js"></script>
-                    <script src="js/demo/chart-pie-demo.js"></script>
-
-                    <!-- clock thingy -->
-                    <script src="https://unpkg.com/@pqina/flip/dist/flip.min.js"></script>
-                    <script>
-                        function setupFlip(tick) {
-
-                            Tick.helper.interval(function () {
-
-                                tick.value++;
-
-                                // Set `aria-label` attribute which screenreaders will read instead of HTML content
-                                tick.root.setAttribute('aria-label', tick.value);
-
-                            }, 1000);
-
-                        }
-                    </script>
-
+            </div>
+        </div>
+    </div>
 </body>
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="js/sb-admin-2.min.js"></script>
+
+<!-- Page level plugins -->
+<script src="vendor/chart.js/Chart.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="js/demo/chart-area-demo.js"></script>
+<script src="js/demo/chart-pie-demo.js"></script>
+
+<!-- clock thingy -->
+<script src="https://unpkg.com/@pqina/flip/dist/flip.min.js"></script>
+<script>
+    function setupFlip(tick) {
+
+        Tick.helper.interval(function () {
+
+            tick.value++;
+
+            // Set `aria-label` attribute which screenreaders will read instead of HTML content
+            tick.root.setAttribute('aria-label', tick.value);
+
+        }, 1000);
+
+    }
+</script>
+
+
 
 </html>
