--- a/column.html
+++ b/column.html
@@ -197,98 +197,95 @@
 
                 </nav>
                 <!-- End of Topbar -->
+
                 <div class="blog_area">
-
-
                     <div class="d-flex blog">
                         <blockquote class="blockquote flex-fill">
                             <p>Analysis of Age-Standardized Death Rates from Cardiovascular Diseases in Japan
-                                (1950–2025)
-                            </p>
+                                (1950–2025)</p>
                             <div class="img-container">
                                 <img src="img/VD_bar chart_all.jpg" alt="" class="img-fluid">
                             </div>
                         </blockquote>
-                        <p class="flex-fill ">
-                        <p>The line chart shows a decline in age-standardized death rates from cardiovascular diseases
-                            in
-                            Japan, from 300 per 100,000 in 1950 to below 50 by 2025. Rates peaked at 350 in the early
-                            1970s,
-                            likely due to limited <span style="color: #FF6347;">heart disease awareness</span>. A steady
-                            drop began in the late 1970s, reaching 250 by 1980, driven by improved <span
-                                style="color: #4169E1;">access to preventive healthcare</span>. By the early 2000s,
-                            rates
-                            fell to 200, aided by <span style="color: #FFD700;">reduction in smoking</span> and <span
-                                style="color: #00CED1;">healthy diet adoption</span>. Minor fluctuations occurred, but
-                            progress in reducing <span style="color: #2E8B57;">deaths due to cardiovascular
-                                diseases</span>
-                            highlights the need for ongoing public health efforts.</p>
+                        <p class="flex-fill">
+                        <p>This bar chart displays the <span style="color: #FF6347;">age-standardized death rate
+                                from cardiovascular diseases</span> in a specific region from 1977 to 2019, measured
+                            per 100,000 people across all ages and both sexes. The rates begin at a high of around
+                            700 in 1977, shown in light blue, and fluctuate over the decades, peaking at
+                            approximately 600 in the early 1980s. A gradual decline follows, with rates dropping to
+                            around 300 by the late 1990s, depicted in darker blue shades. The rates stabilize and
+                            slightly increase again after 2010, reaching about 200 by 2019, shown in dark gray. The
+                            color gradient highlights the <span style="color: #4169E1;">trends and reductions</span>
+                            in <span style="color: #FFD700;">cardiovascular disease mortality</span>, reflecting
+                            potential improvements in <span style="color: #00CED1;">healthcare or lifestyle
+                                factors</span> over time, alongside persistent challenges in managing <span
+                                style="color: #2E8B57;">death rates</span>.</p>
                         </p>
                     </div>
 
                     <div class="d-flex blog">
                         <blockquote class="blockquote flex-fill">
-                            <p>Analysis of Age-Standardized Death Rates from Cardiovascular Diseases in
-                                Australia(1977–2019)
-                            </p>
+                            <p>Analysis of Age-Standardized Death Rates from Cardiovascular Diseases in Australia
+                                (1977–2019)</p>
                             <div class="img-container">
                                 <img src="img/VD_bar chart_usa.jpg" alt="" class="img-fluid">
                             </div>
                         </blockquote>
-                        <p class="flex-fill ">
-                        <p>The bar chart shows age-standardized <span style="color: #2E8B57;">death rates from
-                                cardiovascular diseases</span> per 100,000 people from 1977 to 2019. In 1977, the rate
-                            peaked at around 700, but it sharply declined to 500 by 1980, likely due to improved <span
-                                style="color: #FF6347;">heart disease awareness</span> and <span
-                                style="color: #4169E1;">access to preventive healthcare</span>. Throughout the 1980s and
-                            1990s, rates fluctuated between 400 and 500, but a steady decline began in the late 1990s,
-                            falling below 300 by 2019. This trend reflects advancements in medical treatments, <span
-                                style="color: #FFD700;">reduction in smoking</span>, and <span
-                                style="color: #00CED1;">healthy diet adoption</span>. However, minor increases in some
-                            years
-                            suggest ongoing challenges. The chart highlights significant progress in cardiovascular
-                            health
-                            but emphasizes the need for continued public health initiatives.</p>
+                        <p class="flex-fill">
+                        <p>This bar chart illustrates the <span style="color: #FF6347;">total deaths from
+                                cardiovascular diseases</span> among both sexes in the United States from 2000 to
+                            2021. The number of deaths starts at around 900,000 in 2000, shown in light orange, and
+                            fluctuates slightly over the early 2000s, dipping to approximately 800,000 around 2003.
+                            The rates remain relatively stable through the mid-2000s, depicted in medium orange
+                            shades, before gradually increasing from 2010 onward, reaching over 900,000 by 2021,
+                            shown in dark brown. The color gradient highlights the <span
+                                style="color: #4169E1;">long-term trends</span> in <span
+                                style="color: #FFD700;">cardiovascular disease mortality</span>, reflecting
+                            potential shifts in <span style="color: #00CED1;">population health or risk
+                                factors</span> over time, and underscoring ongoing challenges in managing <span
+                                style="color: #2E8B57;">deaths due to cardiovascular diseases</span> in the U.S.</p>
                         </p>
                     </div>
 
                     <div class="d-flex blog">
                         <blockquote class="blockquote flex-fill">
-                            <p>Analysis of Age-Standardized Death Rates from Cardiovascular Diseases in Mexico
-                                (1960–2020)
-                            </p>
+                            <p>Analysis of Deaths from Cardiovascular Diseases 2021
+                                (1960–2020)</p>
                             <div class="img-container">
                                 <img src="img/bar line.png" alt="" class="img-fluid">
                             </div>
                         </blockquote>
-                        <p class="flex-fill ">
-                        <p>The line chart shows fluctuating age-standardized death rates from cardiovascular diseases in
-                            Mexico, starting at around 200 per 100,000 in 1960. Rates peaked at 220 in the 1980s and
-                            early
-                            1990s, possibly due to limited <span style="color: #FF6347;">heart disease awareness</span>.
-                            A
-                            significant decline began in the late 1990s, dropping to 160 by 2000, driven by improved
-                            <span style="color: #4169E1;">access to preventive healthcare</span> and <span
-                                style="color: #FFD700;">reduction in smoking</span>. However, rates rose again after
-                            2010,
-                            reaching 200 by 2020, indicating challenges like insufficient <span
-                                style="color: #00CED1;">healthy diet adoption</span>. The chart underscores ongoing
-                            issues
-                            in managing <span style="color: #2E8B57;">deaths due to cardiovascular diseases</span>,
-                            highlighting the need for sustained public health efforts.
-                        </p>
+                        <p class="flex-fill">
+                        <p>This bar chart illustrates the number of deaths from <span
+                                style="color: #FF6347;">cardiovascular diseases</span> worldwide in 2021, categorized by
+                            various <span style="color: #4169E1;">risk factors</span>, measured in millions. <span
+                                style="color: #FFD700;">High systolic blood pressure</span> stands out as the leading
+                            cause, contributing over 10 million deaths, depicted in dark red. Other significant risk
+                            factors include <span style="color: #00CED1;">dietary risks</span> (approximately 8 million
+                            deaths) and <span style="color: #2E8B57;">air pollution</span> (around 6 million deaths),
+                            shown in lighter shades of red and orange. Factors such as smoking, high LDL cholesterol,
+                            and high fasting plasma glucose also contribute notably, each causing between 4 to 6 million
+                            deaths, represented in varying orange tones. Lesser contributors, including <span
+                                style="color: #FF6347;">low physical activity</span>, alcohol use, and <span
+                                style="color: #4169E1;">high temperature</span>, result in fewer than 2 million deaths
+                            each, displayed in pale yellow. The color gradient and error bars highlight the <span
+                                style="color: #FFD700;">varying impact</span> and uncertainty of these <span
+                                style="color: #00CED1;">risk factors</span> on <span
+                                style="color: #2E8B57;">cardiovascular disease mortality</span>, emphasizing the need to
+                            address major preventable causes globally.</p>
                         </p>
                     </div>
-                    <footer class="bg-white sticky-footer w-100">
+
+                    <!-- <footer class="bg-white sticky-footer w-100">
                         <div class="container">
                             <div class="copyright text-center">
-                                <span>Copyright &copy; Kiet - Tram 2025</span>
+                                <span>Copyright © Kiet - Tram 2025</span>
                             </div>
                         </div>
-                    </footer>
-                </div>
+                    </footer> -->
 
-                
+
+                </div>
 
 
                 <!-- Scroll to Top Button-->
@@ -296,9 +293,9 @@
                     <i class="fas fa-angle-up"></i>
                 </a>
 
+
             </div>
         </div>
-    </div>
 </body>
 <!-- Bootstrap core JavaScript-->
 <script src="vendor/jquery/jquery.min.js"></script>
