--- a/index.html
+++ b/index.html
@@ -339,11 +339,12 @@
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                     <h6 class="m-0 font-weight-bold text-primary">q(≧▽≦q)</h6>
+
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
                                     <div class="chart-area" style="text-align: center;">
-                                        <!-- <img src="img/nerd.png" alt=""> -->
+                                        <img style="height: 250px;width: 220px;" src="img/nerd.png" alt="">
                                     </div>
                                 </div>
                             </div>
