--- a/treemap.html
+++ b/treemap.html
@@ -211,18 +211,25 @@
                     </blockquote>
                     <p class="flex-fill ">
                     <p>
-                    <p>This treemap visually represents the global distribution of causes of death, with each
-                        rectangle’s size and color indicating the proportion of deaths attributed to specific
-                        categories. <span style="color: #FF6347;">Cardiovascular diseases</span> dominate at 30.2%,
-                        shown in a large red block, followed by <span style="color: #4169E1;">neoplasms</span> at 16.4%,
-                        also in red. Other significant causes include <span style="color: #FFD700;">chronic respiratory
-                            diseases</span> (8.5%), <span style="color: #00CED1;">lower respiratory infections</span>
-                        (5.4%), and <span style="color: #2E8B57;">neonatal disorders</span> (4.9%), with varying shades
-                        of red, orange, and yellow reflecting different disease categories. Smaller causes, like <span
-                            style="color: #FF6347;">malaria</span> (1.0%) and <span
-                            style="color: #4169E1;">HIV/AIDS</span> (1.2%), appear in lighter, smaller blocks, providing
-                        a clear, color-coded overview of <span style="color: #FFD700;">mortality patterns</span>
-                        worldwide.</p>
+                        <p>
+                            This chart shows what people died from globally in <strong>2019</strong>. Each box represents a cause of death, 
+                            and the size of each box is proportional to the number of deaths it caused.
+
+                            As you can see, <span style="color: #FF6347;"><strong>heart diseases</strong></span> and other 
+                            <span style="color: #FF6347;"><strong>cardiovascular diseases</strong></span> are the most common causes of death, 
+                            responsible for a third of all deaths globally, a total of around <strong>18 million</strong>.
+
+                            <span style="color: #4169E1;"><strong>Cardiovascular diseases</strong></span> are part of a larger group of diseases 
+                            called <span style="color: #4169E1;"><strong>non-communicable diseases</strong></span>. These are diseases that tend to develop gradually 
+                            over time and can’t be passed on to other people.
+
+                            This group also includes <span style="color: #FFD700;"><strong>cancers</strong></span>, 
+                            <span style="color: #00CED1;"><strong>chronic respiratory diseases</strong></span>, and other chronic diseases.
+
+                            Taken together, these <span style="color: #4169E1;"><strong>non-communicable diseases</strong></span> are the 
+                            cause of around <strong>three-quarters</strong> of all deaths globally.
+                        </p>
+                        
                     </p>
                     </p>
                 </div>
